--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://GDB7.github.io/social",
   "name": "social",
   "version": "0.1.0",
   "private": true,
@@ -8,12 +9,9 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
-    "@steveeeie/react-page-transition": "^1.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "aphrodite": "^2.4.0",
-    "framer-motion": "^5.0.0",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
@@ -23,6 +21,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeply": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
