--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GDB7.github.io/social",
+  "homepage": "https://gdb7.github.io/social/",
   "name": "social",
   "version": "0.1.0",
   "private": true,
